# lemon

./: .gitignore  .kissconfig  README.md  TODO.md  pyproject.toml
lemon/: __init__.py  analysis_models.py  cli.py  config.py  defaults.py  models.py  output.py  rules.py
lemon/engine/: __init__.py  ast_helpers.py  discovery.py  duplication.py  graph.py  metrics.py  parser.py  shrink.py  test_refs.py  units.py  viz.py
lemon/engine/queries/: go.scm  javascript.scm  php.scm  python.scm  typescript.scm
