[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lemon"
version = "0.1.0"
description = "Language-agnostic code complexity analyzer — full-parity Python port of kiss"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-php>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "networkx>=3.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
lemon = "lemon.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lemon*"]

[tool.setuptools.package-data]
"lemon.engine.queries" = ["*.scm"]
